# voidindex-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst
voidindex_api/: __init__.py
voidindex_api/src/: api.py  stats.json
